--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <p>My first ever website</p>
     <p>I am happy happy now</p>
+    <p>I am a programming lover</p>
+    <input type="text">
+    <br>
+    <button>Click me baby!!!</button>
 </body>
 </html>
